added manual validation

--- a/.devops/disaster-recovery.yml
+++ b/.devops/disaster-recovery.yml
@@ -10,13 +10,6 @@ parameters:
     values:
       - False
       - True
-  - name: 'DEV'
-    displayName: 'Run on DEV environment'
-    type: boolean
-    default: True
-    values:
-      - False
-      - True
   - name: 'FDR'
     displayName: 'Execute FDR database failover'
     type: boolean
@@ -65,12 +58,12 @@ resources:
 
 
 stages:
-  - stage: DEV
-    displayName: Disaster recovery DEV
-    dependsOn: [ ]
-    condition: and(succeeded(), eq(${{parameters.DEV}}, true))
+  - stage: PROD
+    displayName: Disaster recovery PROD
+    dependsOn: []
+    condition: and(succeeded(), eq(${{parameters.PROD}}, true))
     pool:
-      name: "${{variables.poolNameDev}}"
+      name: "${{variables.poolNameProd}}"
     jobs:
       - job: waitForValidation
         condition: succeeded()
@@ -84,86 +77,51 @@ stages:
                 marco.mari@pagopa.it
               instructions: 'Please authorize the postgreSQL failover and resume'
               onTimeout: 'reject'
-      - job: fake_fdr_failover
-        displayName: fake fdr failover
+      - job: postgres_fdr_failover
+        displayName: FDR postgres flexible failover
         strategy:
           parallel: 1
         timeoutInMinutes: $[variables.TIME_OUT]
-        dependsOn: waitForValidation
         condition: and(succeeded(), eq(${{parameters.FDR}}, true))
         steps:
-          - task: Bash@3
-            inputs:
-              targetType: inline
-              failOnStderr: true
-              script: |
-                echo "fake failover in progress"
-      - job: fake_nodo_failover
-        displayName: fake nodo failover
+          - template: templates/postgres-flexible-failover/template.yaml@terraform
+            parameters:
+              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+              PRIVATE_DNS_ZONE_RECORD_NAME: "fdr-db"
+              FAILOVER_DB_RG: "pagopa-p-weu-fdr-db-rg"
+              FAILOVER_DB_NAME: "pagopa-p-neu-fdr-pgflex"
+              WORKINGDIR: ${{ variables.WORKING_DIR }}
+              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+      - job: postgres_gpd_failover
+        displayName: GPD/GPS postgres flexible failover
         strategy:
           parallel: 1
         timeoutInMinutes: $[variables.TIME_OUT]
-        dependsOn: waitForValidation
+        condition: and(succeeded(), eq(${{parameters.GPS}}, true))
+        steps:
+          - template: templates/postgres-flexible-failover/template.yaml@terraform
+            parameters:
+              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+              PRIVATE_DNS_ZONE_RECORD_NAME: "gpd-db"
+              FAILOVER_DB_RG: "pagopa-p-pgres-flex-rg"
+              FAILOVER_DB_NAME: "pagopa-p-neu-gps-pgflex"
+              WORKINGDIR: ${{ variables.WORKING_DIR }}
+              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+      - job: postgres_nodo_failover
+        displayName: Nodo postgres flexible failover
+        strategy:
+          parallel: 1
+        timeoutInMinutes: $[variables.TIME_OUT]
         condition: and(succeeded(), eq(${{parameters.NODO}}, true))
         steps:
-          - task: Bash@3
-            inputs:
-              targetType: inline
-              failOnStderr: true
-              script: |
-                echo "fake failover in progress"
-#  - stage: PROD
-#    displayName: Disaster recovery PROD
-#    dependsOn: []
-#    condition: and(succeeded(), eq(${{parameters.PROD}}, true))
-#    pool:
-#      name: "${{variables.poolNameProd}}"
-#    jobs:
-#      - job: postgres_fdr_failover
-#        displayName: FDR postgres flexible failover
-#        strategy:
-#          parallel: 1
-#        timeoutInMinutes: $[variables.TIME_OUT]
-#        condition: and(succeeded(), eq(${{parameters.FDR}}, true))
-#        steps:
-#          - template: templates/postgres-flexible-failover/template.yaml@terraform
-#            parameters:
-#              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-#              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-#              PRIVATE_DNS_ZONE_RECORD_NAME: "fdr-db"
-#              FAILOVER_DB_RG: "pagopa-p-weu-fdr-db-rg"
-#              FAILOVER_DB_NAME: "pagopa-p-neu-fdr-pgflex"
-#              WORKINGDIR: ${{ variables.WORKING_DIR }}
-#              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
-#      - job: postgres_gpd_failover
-#        displayName: GPD/GPS postgres flexible failover
-#        strategy:
-#          parallel: 1
-#        timeoutInMinutes: $[variables.TIME_OUT]
-#        condition: and(succeeded(), eq(${{parameters.GPS}}, true))
-#        steps:
-#          - template: templates/postgres-flexible-failover/template.yaml@terraform
-#            parameters:
-#              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-#              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-#              PRIVATE_DNS_ZONE_RECORD_NAME: "gpd-db"
-#              FAILOVER_DB_RG: "pagopa-p-pgres-flex-rg"
-#              FAILOVER_DB_NAME: "pagopa-p-neu-gps-pgflex"
-#              WORKINGDIR: ${{ variables.WORKING_DIR }}
-#              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
-#      - job: postgres_nodo_failover
-#        displayName: Nodo postgres flexible failover
-#        strategy:
-#          parallel: 1
-#        timeoutInMinutes: $[variables.TIME_OUT]
-#        condition: and(succeeded(), eq(${{parameters.NODO}}, true))
-#        steps:
-#          - template: templates/postgres-flexible-failover/template.yaml@terraform
-#            parameters:
-#              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
-#              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
-#              PRIVATE_DNS_ZONE_RECORD_NAME: "nodo-db"
-#              FAILOVER_DB_RG: "pagopa-p-weu-nodo-db-rg"
-#              FAILOVER_DB_NAME: "pagopa-p-neu-nodo-flexible-postgresql"
-#              WORKINGDIR: ${{ variables.WORKING_DIR }}
-#              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
+          - template: templates/postgres-flexible-failover/template.yaml@terraform
+            parameters:
+              PRIVATE_DNS_ZONE_NAME: "p.internal.postgresql.pagopa.it"
+              PRIVATE_DNS_ZONE_RG_NAME: "pagopa-p-vnet-rg"
+              PRIVATE_DNS_ZONE_RECORD_NAME: "nodo-db"
+              FAILOVER_DB_RG: "pagopa-p-weu-nodo-db-rg"
+              FAILOVER_DB_NAME: "pagopa-p-neu-nodo-flexible-postgresql"
+              WORKINGDIR: ${{ variables.WORKING_DIR }}
+              AZURE_APPLY_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionApplyNameProd}}"
