--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -10,25 +10,83 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-#      - name: 🏁 Init terraform folders
-#        id: init_terraform_folders
-#        shell: bash
-#        env:
-#          TF_PLUGIN_CACHE_DIR: "$HOME/.terraform.d/plugin-cache"
-#        run: |
-#
-#          echo -e "\n+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-"
-#          echo    "+ 🔨 CREATE CACHE FOLDER         +"
-#          echo -e "+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-\n"
-#
-#          mkdir -p ${TF_PLUGIN_CACHE_DIR}
-#
-#          ls -la ${TF_PLUGIN_CACHE_DIR}
-#
-#          echo "📢 Show space"
-#          df -h
-#          du -h ${TF_PLUGIN_CACHE_DIR}
-      - name: 🤔 PR Static Analysis v1
-        uses: pagopa/eng-github-actions-iac-template/azure/terraform-static-analysis@fix-space-limit # v1.14.1
-        with:
-          precommit_version: 'v1.89.1@sha256:1ea921bc4fe87651d41677218e537afdcdb8202e757e554b9866668eaba144c5'
+    - name: ⚡ Checkout code
+      uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+
+    - name: 🏁 Init terraform folders
+      id: init_terraform_folders
+      shell: bash
+      env:
+        TF_PLUGIN_CACHE_DIR: "$HOME/.terraform.d/plugin-cache"
+      run: |
+
+        echo -e "\n+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-"
+        echo    "+ 🔨 CREATE CACHE FOLDER         +"
+        echo -e "+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-\n"
+
+        mkdir -p ${TF_PLUGIN_CACHE_DIR}
+
+        echo "📢 Show space"
+        df -h
+        du -h ${TF_PLUGIN_CACHE_DIR}
+        printenv
+
+        echo -e "\n+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-"
+        echo    "+ 🏁 INIT TERRAFORM FOLDERS 🏁   +"
+        echo -e "+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-\n"
+
+        FOLDERS=$(grep -rl --include='*.tf' --exclude-dir='.terraform' '^' . | xargs -I{} dirname {} | sort -u)
+        echo "FOLDERS=${FOLDERS}"
+
+        pids=()
+
+        TAG=$(cat .terraform-version)
+        docker pull hashicorp/terraform:$TAG
+
+        for f in $FOLDERS; do
+          pushd "$(pwd)/${f}"
+            sed -i -e 's/  backend "azurerm" {}//g' 99_main.tf # use local backend
+            docker run -v $(pwd):/tmp -w /tmp hashicorp/terraform:$TAG init &
+            pids+=($!)
+          popd
+
+        done
+
+        # Wait for each specific process to terminate.
+        # Instead of this loop, a single call to 'wait' would wait for all the jobs
+        # to terminate, but it would not give us their exit status.
+        #
+        for pid in "${pids[@]}"; do
+          #
+          # Waiting on a specific PID makes the wait command return with the exit
+          # status of that process. Because of the 'set -e' setting, any exit status
+          # other than zero causes the current shell to terminate with that exit
+          # status as well.
+          #
+          wait "$pid"
+        done
+
+        echo "📢 Show space"
+        df -h
+        du -h ${TF_PLUGIN_CACHE_DIR}
+
+    - name: Show precommit version
+      shell: bash
+      run: |
+        echo -e "\n+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+"
+        echo    "+ 1️⃣  SHOW PRECOMMIT VERSION 1️⃣  +"
+        echo -e "+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+\n"
+
+        TAG=${{ inputs.precommit_version }}
+        docker run --rm --entrypoint cat ghcr.io/antonbabenko/pre-commit-terraform:$TAG /usr/bin/tools_versions_info
+
+    - name: 🚨 Run precommit
+      id: run_precommit
+      shell: bash
+      run: |
+        echo -e "\n+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+"
+        echo    "+- 🚨 PRECOMMIT TERRAFORM 🚨 -+"
+        echo -e "+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+\n"
+
+        TAG=${{ inputs.precommit_version }}
+        docker run -v $(pwd):/lint -w /lint ghcr.io/antonbabenko/pre-commit-terraform:$TAG run -a
