try terraform install

--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -82,7 +82,7 @@ jobs:
         echo    "+ 1️⃣  SHOW PRECOMMIT VERSION 1️⃣  +"
         echo -e "+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+\n"
 
-        TAG=1.89.1
+        TAG=v1.89.1
         docker run --rm --entrypoint cat ghcr.io/antonbabenko/pre-commit-terraform:$TAG /usr/bin/tools_versions_info
 
     - name: 🚨 Run precommit
@@ -93,5 +93,5 @@ jobs:
         echo    "+- 🚨 PRECOMMIT TERRAFORM 🚨 -+"
         echo -e "+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+\n"
 
-        TAG=1.89.1
+        TAG=v1.89.1
         docker run -v $(pwd):/lint -w /lint ghcr.io/antonbabenko/pre-commit-terraform:$TAG run -a
