try with docker env variables

--- a/.github/workflows/static_analysis_pr.yml
+++ b/.github/workflows/static_analysis_pr.yml
@@ -13,9 +13,9 @@ jobs:
     - name: ⚡ Checkout code
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
-    - uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: "1.6.6"
+    # - uses: hashicorp/setup-terraform@v3
+    #   with:
+    #     terraform_version: "1.6.6"
 
     - name: 🏁 Init terraform folders
       id: init_terraform_folders
@@ -49,7 +49,8 @@ jobs:
         for f in $FOLDERS; do
           pushd "$(pwd)/${f}"
             sed -i -e 's/  backend "azurerm" {}//g' 99_main.tf # use local backend
-            terraform init &
+            #terraform init &
+            docker run -v $(pwd):/tmp -w /tmp -e TF_PLUGIN_CACHE_DIR=${{ runner.temp }}/.terraform.d/plugin-cache  hashicorp/terraform:$TAG init &
             pids+=($!)
             break
           popd
